--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,8 @@ name: build
 on:
   pull_request:
     types:
-      - "synchronize"
+      - opened
+      - synchronize
   push:
     branches:
       - 'main'
