--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
       - synchronize
   push:
     branches:
-      - 'main'
+      - "main"
 
 permissions:
   contents: read
@@ -27,7 +27,3 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.txt
-      - name: lint
-        uses: docker://morphy/revive-action:v2
-        with:
-          config: revive.toml
