--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,6 +21,8 @@ linters-settings:
         disabled: true
       - name: cyclomatic
         disabled: true
+      - name: exported
+        disabled: true
       - name: file-header
         disabled: true
       - name: function-length
@@ -30,4 +32,8 @@ linters-settings:
       - name: line-length-limit
         disabled: true
       - name: max-public-structs
+        disabled: true
+      - name: modifies-value-receiver
+        disabled: true
+      - name: package-comments
         disabled: true
