--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,10 +1,10 @@
 name: golangci-lint
+
 on:
-  push:
-    branches:
-      - master
-      - main
   pull_request:
+    types:
+      - opened
+      - synchronize
 
 permissions:
   contents: read
